Adding support for debug of Portal